plugins {
    id 'spotifybackup.java-application-conventions'
}

dependencies {
    implementation 'org.apache.commons:commons-text'
//    implementation project(':utilities')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'spotifybackup.app.App'
}
